--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -20,7 +20,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Player/sola.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://test.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Art/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,17 +28,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://level_2.tscn", "res://level_3.tscn", "res://gameover.tscn", "res://global.tscn", "res://title.tscn", "res://Lamp.tscn", "res://Player/sola.tscn")
-current_scene="res://main.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://level_2.tscn", "res://level_3.tscn", "res://gameover.tscn", "res://global.tscn", "res://title.tscn", "res://Lamp.tscn", "res://Player/sola.tscn", "res://luna.tscn", "res://test.tscn")
+current_scene="res://level_3.tscn"
 center_split_offset=0
 selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 
 [ScriptEditor]
 
 open_scripts=["res://dialogue.gd", "res://gameover.gd", "res://Global.gd", "res://hud.gd", "res://Lamp.gd", "res://level_2.gd", "res://level_3.gd", "res://luna.gd", "res://main.gd", "res://mob2.gd", "res://mob3.gd", "res://mob.gd", "res://next_level.gd", "res://Player/sola.gd", "res://sundae.gd", "res://title.gd", "res://tutorial.gd", "res://win.gd"]
-selected_script="res://main.gd"
+selected_script="res://level_3.gd"
 open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
