--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,23 +13,23 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 <<<<<<<HEADdock_hsplit_2=298
-dock_hsplit_3=-586
+dock_hsplit_3=-798
 dock_hsplit_2=599
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://test.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Art/")
+dock_filesystem_selected_paths=PackedStringArray("res://testroom.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://level_2.tscn", "res://level_3.tscn", "res://gameover.tscn", "res://global.tscn", "res://title.tscn", "res://Lamp.tscn", "res://Player/sola.tscn", "res://luna.tscn", "res://test.tscn")
-current_scene="res://level_3.tscn"
+open_scenes=PackedStringArray("res://title.tscn", "res://tutorial.tscn", "res://level_1.tscn", "res://level_2.tscn", "res://level_3.tscn", "res://credits.tscn", "res://win.tscn", "res://gameover.tscn", "res://testroom.tscn")
+current_scene="res://title.tscn"
 center_split_offset=0
 selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
@@ -37,10 +37,10 @@ selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://dialogue.gd", "res://gameover.gd", "res://Global.gd", "res://hud.gd", "res://Lamp.gd", "res://level_2.gd", "res://level_3.gd", "res://luna.gd", "res://main.gd", "res://mob2.gd", "res://mob3.gd", "res://mob.gd", "res://next_level.gd", "res://Player/sola.gd", "res://sundae.gd", "res://title.gd", "res://tutorial.gd", "res://win.gd"]
-selected_script="res://level_3.gd"
+open_scripts=["res://credits.gd", "res://dialogue.gd", "res://gameover.gd", "res://Global.gd", "res://hud.gd", "res://Lamp.gd", "res://level_1.gd", "res://level_2.gd", "res://level_3.gd", "res://luna.gd", "res://mob2.gd", "res://mob3.gd", "res://mob.gd", "res://next_level.gd", "res://Player/sola.gd", "res://sundae.gd", "res://testroom.gd", "res://title.gd", "res://tutorial.gd", "res://win.gd"]
+selected_script="res://title.gd"
 open_help=["Node"]
-script_split_offset=140
+script_split_offset=300
 list_split_offset=0
 
 [ShaderEditor]
