--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,27 +1,13 @@
-[res://main.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 2,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 20,
-"scroll_position": 81.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://mob2.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 49,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 63,
-"scroll_position": 62.0,
+"row": 91,
+"scroll_position": 72.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,12 +17,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 54,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 14,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 14,
+"selection_to_column": 54,
+"selection_to_line": 14,
 "syntax_highlighter": "GDScript"
 }
 
@@ -59,11 +49,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 0.0,
+"row": 24,
+"scroll_position": 31.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -73,12 +63,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 87,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 49,
+"row": 32,
 "scroll_position": 23.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 86,
+"selection_from_line": 32,
+"selection_to_column": 87,
+"selection_to_line": 32,
 "syntax_highlighter": "GDScript"
 }
 
@@ -87,11 +81,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 53,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 12.0,
+"row": 78,
+"scroll_position": 63.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -101,10 +95,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 52,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
+"row": 15,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -115,11 +109,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 6,
+"column": 54,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
-"scroll_position": 2.0,
+"row": 19,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -129,16 +123,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 50,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
-"scroll_position": 71.0,
+"row": 86,
+"scroll_position": 3.0,
 "selection": true,
-"selection_from_column": 8,
-"selection_from_line": 11,
-"selection_to_column": 18,
-"selection_to_line": 11,
+"selection_from_column": 2,
+"selection_from_line": 61,
+"selection_to_column": 50,
+"selection_to_line": 86,
 "syntax_highlighter": "GDScript"
 }
 
@@ -147,16 +141,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 52,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 14,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 14,
-"selection_to_column": 52,
-"selection_to_line": 14,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -165,11 +155,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 10,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 49,
-"scroll_position": 0.0,
+"row": 83,
+"scroll_position": 45.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -179,11 +169,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 50,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
-"scroll_position": 11.0,
+"row": 80,
+"scroll_position": 8.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -193,11 +183,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 47,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 118,
-"scroll_position": 111.0,
+"row": 151,
+"scroll_position": 105.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -254,6 +244,48 @@ state={
 "h_scroll_position": 0,
 "row": 13,
 "scroll_position": 13.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://testroom.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 9,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 24,
+"scroll_position": 44.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://level_1.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 9,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 24,
+"scroll_position": 1.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://credits.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 51,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
