--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,16 +17,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 54,
+"column": 53,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 14,
-"selection_to_column": 54,
-"selection_to_line": 14,
+"row": 30,
+"scroll_position": 13.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -53,7 +49,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 24,
-"scroll_position": 31.0,
+"scroll_position": 24.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -63,16 +59,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 87,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 32,
-"scroll_position": 23.0,
-"selection": true,
-"selection_from_column": 86,
-"selection_from_line": 32,
-"selection_to_column": 87,
-"selection_to_line": 32,
+"row": 16,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -81,11 +73,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 38,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 78,
-"scroll_position": 63.0,
+"row": 54,
+"scroll_position": 40.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -112,8 +104,8 @@ state={
 "column": 54,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
-"scroll_position": 9.0,
+"row": 10,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -123,16 +115,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 50,
+"column": 109,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 86,
-"scroll_position": 3.0,
+"row": 43,
+"scroll_position": 22.0,
 "selection": true,
-"selection_from_column": 2,
-"selection_from_line": 61,
-"selection_to_column": 50,
-"selection_to_line": 86,
+"selection_from_column": 1,
+"selection_from_line": 43,
+"selection_to_column": 109,
+"selection_to_line": 43,
 "syntax_highlighter": "GDScript"
 }
 
@@ -169,11 +161,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 50,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 80,
-"scroll_position": 8.0,
+"row": 39,
+"scroll_position": 26.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -197,10 +189,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 12,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 4,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -257,7 +249,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 24,
-"scroll_position": 44.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -267,11 +259,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 9,
+"column": 53,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
-"scroll_position": 1.0,
+"row": 23,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -285,6 +277,34 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 14,
+"scroll_position": 12.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://endless.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 14,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 83,
+"scroll_position": 68.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://endless_gameover.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
