--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://endless.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://fence.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Music/", "res://Music/SFX/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://tutorial.tscn", "res://level_1.tscn", "res://level_2.tscn", "res://level_3.tscn", "res://Player/sola.tscn", "res://endless.tscn")
-current_scene="res://endless.tscn"
+open_scenes=PackedStringArray("res://tutorial.tscn", "res://level_1.tscn", "res://level_2.tscn", "res://level_3.tscn", "res://Player/sola.tscn", "res://endless.tscn", "res://testroom.tscn", "res://Lamp.tscn", "res://fence.tscn")
+current_scene="res://Lamp.tscn"
 center_split_offset=0
 selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
@@ -38,7 +38,7 @@ selected_main_editor_idx=0
 [ScriptEditor]
 
 open_scripts=["res://credits.gd", "res://dialogue.gd", "res://endless.gd", "res://endless_gameover.gd", "res://gameover.gd", "res://Global.gd", "res://hud.gd", "res://Lamp.gd", "res://level_1.gd", "res://level_2.gd", "res://level_3.gd", "res://luna.gd", "res://mob2.gd", "res://mob3.gd", "res://mob.gd", "res://next_level.gd", "res://Player/sola.gd", "res://sundae.gd", "res://testroom.gd", "res://title.gd", "res://tutorial.gd", "res://win.gd"]
-selected_script="res://endless.gd"
+selected_script="res://Lamp.gd"
 open_help=["Node"]
 script_split_offset=300
 list_split_offset=0
